@@ -1,3 +1,5 @@
 flagsdir = $(pkgdatadir)/flags
-flags_DATA = czech.png denmark.png england.png france.png germany.png \
+flagfiles = czech.png denmark.png england.png france.png germany.png \
 	     iceland.png italy.png japan.png russia.png turkey.png usa.png
+flags_DATA = $(flagfiles)
+EXTRA_DIST = $(flagfiles)
