@@ -1,2 +1,4 @@
 fontsdir = $(pkgdatadir)/fonts
-fonts_DATA = COPYRIGHT.TXT.gz VeraBd.ttf VeraSeBd.ttf Vera.ttf
+fontfiles = COPYRIGHT.TXT.gz VeraBd.ttf VeraSeBd.ttf Vera.ttf
+fonts_DATA = $(fontfiles)
+EXTRA_DIST = $(fontfiles)
